full editing, saving
sliders, inputs, music adding, edit mode system

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
       }
     </style>
     <title>Hermit's Diary</title>
+
+    <script src="https://unpkg.com/dropbox/dist/Dropbox-sdk.min.js"></script>
+	  <script src="https://unpkg.com/dropbox/dist/DropboxTeam-sdk.min.js"></script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
