app closing effect

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <style>
-      body{
+      .App{
         background: url(/res/bg.png)
       }
     </style>
